[tool.poetry]
name = "currency-converter"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "currency"}]

[tool.poetry.dependencies]
python = "^3.11"
Pillow = '9.4.0'
pytest = "^7.2.2"
requests = '2.28.2'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
